# nano-signal-slot

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  nano_function.hpp  nano_mutex.hpp  nano_noop_mutex.hpp  nano_observer.hpp  nano_pool_allocator.hpp  nano_signal_slot.hpp  nano_test.cpp
.github/workflows/: ci.yml
benchmark/: README.md  asg_benchmark.hpp  benchmark.cpp  benchmark.hpp  benchmark_asg.hpp  benchmark_bs1.hpp  benchmark_bs2.hpp  benchmark_evf.hpp  benchmark_evl.hpp  benchmark_jls.hpp  benchmark_jos.hpp  benchmark_mws.hpp  benchmark_nls.hpp  benchmark_nod.hpp  benchmark_nss.hpp  benchmark_psg.hpp  benchmark_sss.hpp  benchmark_utility.hpp  benchmark_wsg.hpp  benchmark_yas.hpp  bs1_benchmark.hpp  bs2_benchmark.hpp  chrono_timer.hpp  evf_benchmark.hpp  evl_benchmark.hpp  evs_benchmark.hpp  jls_benchmark.hpp  miscellaneous.hpp  nls_benchmark.hpp  nss_benchmark.hpp  psg_benchmark.hpp  s11_benchmark.hpp  sss_benchmark.hpp  wsg_benchmark.hpp
benchmark/lib/eviltwin/: observer.hpp  observer_fork.hpp  observer_safe.hpp
benchmark/lib/jeffomatic/jl_signal/: README.md
benchmark/lib/jl_signal/: FastDelegate.h  ObjectPool.cpp  SignalBase.h  StaticSignalConnectionAllocators.h
benchmark/lib/joanrieu/signal11/: README.md  (+2 more)
benchmark/lib/neolib_sigslot/: async_signal.hpp  async_slot.hpp  cstdint.hpp  files.txt  io_thread.cpp  io_thread.hpp  lockable.hpp  locking_policy.hpp  neolib.hpp  signal.hpp  signal_interface.hpp  slot.hpp  slot_interface.hpp  thread.cpp  thread.hpp  timer.hpp
benchmark/lib/nod/: README.md
benchmark/lib/signal11/: README.md  Signal.h  SignalTests.cpp
benchmark/lib/yassi/: hello.cc  yassi.h
benchmark/src/: benchmark_asg.cpp  benchmark_bs1.cpp  benchmark_bs2.cpp  benchmark_evf.cpp  benchmark_evl.cpp  benchmark_jls.cpp  benchmark_jos.cpp  benchmark_mws.cpp  benchmark_nls.cpp  benchmark_nod.cpp  benchmark_nss.cpp  benchmark_psg.cpp  benchmark_sss.cpp  benchmark_wsg.cpp  benchmark_yas.cpp
examples/: CMakeLists.txt  doc_view.cpp
include/: nano_observer.hpp  nano_signal_slot.hpp
tests/: CMakeLists.txt  README.md  Test_Base.hpp  Test_Observer_Destruction.cpp  Test_ST_Policy.cpp  Test_ST_Policy_Safe.cpp  Test_Signal_Connect.cpp  Test_Signal_Disconnect.cpp  Test_Signal_Edge_Cases.cpp  Test_Signal_Fire.cpp  Test_TS_Policy.cpp  Test_TS_Policy_Safe.cpp  Test_TS_Policy_Strict.cpp  catch_main.cpp  simple_test.cpp
vs/: nano-signal-slot.sln  nano-signal-slot.vcxproj  nano-signal-slot.vcxproj.filters
vs/tests/: tests.vcxproj  tests.vcxproj.filters
(+37 files in other folders)
